--- a/template/base.html
+++ b/template/base.html
@@ -5,7 +5,9 @@
     <title>{% block title %}{% endblock %}</title>
     {% load staticfiles %}
     <link rel="stylesheet" href="{% static "bower_components/pure/pure-min.css" %}">
+    <link rel="stylesheet" href="{% static "bower_components/font-awesome/css/font-awesome.min.css" %}">
     <link rel="stylesheet" href="{% static "layout/side-menu.css" %}">
+    <link rel="stylesheet" href="{% static "style/style.css" %}">
 </head>
 <body>
 <div id="layout">
