--- a/template/index.html
+++ b/template/index.html
@@ -1,9 +1,60 @@
 {% extends "base.html" %}
 {% block title %}Online Bookshop{% endblock %}
 {% block content %} 
-<h1>Welcome to the Online Bookshop</h1>
+<div id="main">
+    <div class="header">
+        <h1>Online Bookshop</h1>
+        <h2>A simple way to buy your favourite books</h2>
+    </div>
 
-<form action="/show_login/">
-    <button>Login</button>
-</form>
+    <div class="content">
+        <h2 class="content-subhead">What's New?</h2>
+        <div class="pure-g">
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            </div>
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            </div>
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            </div>
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            </div>
+        </div>
+
+        <h2 class="content-subhead">Hotest Books</h2>
+        <div class="pure-g">
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            </div>
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            </div>
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            </div>
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            </div>
+        </div>
+
+        <h2 class="content-subhead">What we prepared for You</h2>
+        <div class="pure-g">
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            </div>
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            </div>
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            </div>
+            <div class="pure-u-1-4">
+                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
