--- a/template/specification.html
+++ b/template/specification.html
@@ -1,5 +1,79 @@
 {% extends "base.html" %}
-{% block title %}{% endblock %}
+{% block title %}lalala{% endblock %}
 {% block content %} 
+<div id="main" class="content book-specification-wrapper">
+<div id="book-specification" class="pure-g content-wrapper">
+<div class="pure-u-1-3">
+    {% load staticfiles %}
+    <img class="pure-img-responsive" src="{% static "img/books/book_covers/Harry_Potter_and_his_Friends.jpeg" %}" alt="{{ book_name }}">
+</div>
+<div class="pure-u-2-3">
+    <h1>Harry Potter and his Friends</h1>
+    <p>
+    Pure Grids are easy to work with, and very powerful. There are a few simple concepts to keep in mind:
+    Grid classes vs. unit classes
+    Pure Grids consist of two types of classes: the grid class (pure-g) and unit classes (pure-u or pure-u-*)
+    The widths of the units are fractions
+    <div class="price pure-g">
+        <div class="pure-u-1-4">
+            <span class="price-head">Price:</span>
+        </div>
+        <div class="pure-u-1-4">
+            <i class="fa fa-rmb fa-lg"></i>
+            <span class="price-number">11.00</span>
+        </div>
+    
+    </div>
+    <div class="shopping">
+        <a class="pure-button button-buy button-large" href="#">
+            Buy
+        </a>
+        <a class="pure-button button-checkout button-large" href="#">
+            <i class="fa fa-shopping-cart fa-lg"></i>
+            Add to Cart
+        </a>
+    </div>
+    </p>
+</div>
+</div>
+<div id="book-comment" class="pure-g content-wrapper">
+</div>
+<div id="book-recommend" class="pure-g content-wrapper">
+    <div class="pure-u-1-4">
+        <div class="book-cover">
+            <img src="" alt="">
+        </div>
+        <div class="book-title">Harry Potter and his Friends2</div>
+    </div>
+    <div class="pure-u-1-4">
+        <div class="book-cover">
+            <img src="" alt="">
+        </div>
+        <div class="book-title">Harry Potter and his Friends2</div>
+    </div>
+    <div class="pure-u-1-4">
+        <div class="book-cover">
+            <img src="" alt="">
+        </div>
+        <div class="book-title">Harry Potter and his Friends2</div>
+    </div>
+    <div class="pure-u-1-4">
+        <div class="book-cover">
+            <img src="" alt="">
+        </div>
+        <div class="book-title">Harry Potter and his Friends2</div>
+    </div>
+</div>
+<div id="basic-info" class="content-wrapper">
+    <div>publisher: lalala Publisher.co</div>
+    <div>book name: lalalalallalal</div>
+    <div>page number: 111111</div>
+    <div>language: Chinese</div>
+    <div>isbn: 123141-31231-3123-131</div>
+</div>
+<div id="comment" class="content-wrapper">
+
+</div>
+</div>
 
 {% endblock %}
