--- a/static/layout/side-menu.css
+++ b/static/layout/side-menu.css
@@ -8,19 +8,6 @@ body {
 }
 
 /*
-Add transition to containers so they can push in and out.
-*/
-#layout,
-#menu,
-.menu-link {
-    -webkit-transition: all 0.2s ease-out;
-    -moz-transition: all 0.2s ease-out;
-    -ms-transition: all 0.2s ease-out;
-    -o-transition: all 0.2s ease-out;
-    transition: all 0.2s ease-out;
-}
-
-/*
 This is the parent `<div>` that contains the menu and the content area.
 */
 #layout {
@@ -29,21 +16,22 @@ This is the parent `<div>` that contains the menu and the content area.
 }
     #layout.active {
         position: relative;
-        left: 150px;
+        left: 200px;
     }
         #layout.active #menu {
-            left: 150px;
-            width: 150px;
+            left: 200px;
+            width: 200px;
         }
 
         #layout.active .menu-link {
-            left: 150px;
+            left: 200px;
         }
 /*
 The content `<div>` is where all your content goes.
 */
 .content {
     margin: 0 auto;
+    margin-top: 50px;
     padding: 0 2em;
     max-width: 800px;
     margin-bottom: 50px;
@@ -59,7 +47,7 @@ The content `<div>` is where all your content goes.
  }
     .header h1 {
         margin: 0.2em 0;
-        font-size: 3em;
+        font-size: 2em;
         font-weight: 300;
     }
      .header h2 {
@@ -83,8 +71,8 @@ appears on the left side of the page.
 */
 
 #menu {
-    margin-left: -150px; /* "#menu" width */
-    width: 150px;
+    margin-left: -200px; /* "#menu" width */
+    width: 200px;
     position: fixed;
     top: 0;
     left: 0;
@@ -101,6 +89,7 @@ appears on the left side of the page.
         color: #999;
         border: none;
         padding: 0.6em 0 0.6em 0.6em;
+        font-size: 20px;
     }
 
     /*
@@ -130,14 +119,14 @@ appears on the left side of the page.
     /*
     This styles the selected menu item `<li>`.
     */
-    #menu .pure-menu-selected,
+    #menu .active,
     #menu .pure-menu-heading {
-        background: #1f8dd6;
+        /*background: #1f8dd6;*/
     }
         /*
         This styles a link within a selected menu item `<li>`.
         */
-        #menu .pure-menu-selected a {
+        #menu .active a {
             color: #fff;
         }
 
@@ -145,7 +134,7 @@ appears on the left side of the page.
     This styles the menu heading.
     */
     #menu .pure-menu-heading {
-        font-size: 110%;
+        font-size: 160%;
         color: #fff;
         margin: 0;
     }
@@ -219,20 +208,20 @@ Hides the menu at `48em`, but modify this based on your app's needs.
     }
 
     #layout {
-        padding-left: 150px; /* left col width "#menu" */
+        padding-left: 200px; /* left col width "#menu" */
         left: 0;
     }
     #menu {
-        left: 150px;
+        left: 200px;
     }
 
     .menu-link {
         position: fixed;
-        left: 150px;
+        left: 200px;
         display: none;
     }
 
     #layout.active .menu-link {
-        left: 150px;
+        left: 200px;
     }
 }
