--- a/template/base.html
+++ b/template/base.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
-    {% load staticfiles %}
-    <link rel="stylesheet" href="{% static "bower_components/pure/pure-min.css" %}">
-    <link rel="stylesheet" href="{% static "bower_components/font-awesome/css/font-awesome.min.css" %}">
-    <link rel="stylesheet" href="{% static "layout/side-menu.css" %}">
-    <link rel="stylesheet" href="{% static "style/style.css" %}">
+<meta charset="UTF-8">
+<title>{% block title %}{% endblock %}</title>
+{% load staticfiles %}
+<link rel="stylesheet" href="{% static "bower_components/pure/pure-min.css" %}">
+<link rel="stylesheet" href="{% static "bower_components/font-awesome/css/font-awesome.min.css" %}">
+<link rel="stylesheet" href="{% static "layout/side-menu.css" %}">
+<link rel="stylesheet" href="{% static "style/style.css" %}">
 </head>
 <body>
 <div id="layout">
-    <!-- Menu toggle -->
-    <a href="#menu" id="menuLink" class="menu-link">
-        <!-- Hamburger icon -->
-        <span></span>
-    </a>
     <div id="menu">
         <div class="pure-menu pure-menu-open">
-            <a class="pure-menu-heading" href="#">Bookshop</a>
-
+            <a class="pure-menu-heading" href="/#"><i class="fa fa-book fa-md"></i> Bookshop</a>
             <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#">Books</a></li>
-
-                <li class="menu-item-divided pure-menu-selected">
-                <a href="#">Search</a>
-                </li>
-
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Account</a></li>
+                {% load base_extra %}
+                <li class="{% activetabs request 'search' %}"><a href="/search/">Books</a></li>
+                <li class="{% activetabs request 'help' %}"><a href="/help/">Help</a></li>
+                <!--<li class="{% activetabs request 'admin' %}"><a href="/admin/">Contact</a></li>-->
+                <li class="{% activetabs request 'accounts' %}"><a href="/accounts/">Account</a></li>
+                <li class="{% activetabs request 'generate_order' %}"><a href="/generate_order/">Checkout
+                    <span class="badge">{{ request.user.shop_cart.all | length }}</span>
+                </a></li>
             </ul>
         </div>
     </div>
