--- a/template/index.html
+++ b/template/index.html
@@ -10,51 +10,60 @@
     <div class="content">
         <h2 class="content-subhead">What's New?</h2>
         <div class="pure-g">
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            {% for book in latest_books %}
+            <div class="pure-u-1-4 book-thumbnail">
+                <a class="pure-button" href="/books/{{ book.isbn }}">
+                <img class="pure-img-responsive" src="" alt="{{ book.name }}">
+                <h4>{{ book.name }}</h4>
+                </a>
             </div>
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            {% empty %}
+            <div class="pure-u-1-1 empty_message">
+                Currently, there are no new books. Go to our book repo to look for your favorite.
             </div>
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
-            </div>
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
-            </div>
+            {% endfor %}
         </div>
 
         <h2 class="content-subhead">Hotest Books</h2>
         <div class="pure-g">
+            {% for book in hotest_books %}
             <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+                <a class="pure-button" href="/books/{{ book.isbn }}">
+                <img class="pure-img-responsive" src="" alt="{{ book.name }}">
+                <h4>{{ book.name }}</h4>
+                </a>
             </div>
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            {% empty %}
+            <div class="pure-u-1-1 empty_message">
+                Currently, there are no hotest books. Go to our book repo to look for your favorites.
             </div>
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
-            </div>
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
-            </div>
+            {% endfor %}
         </div>
 
+        {% if user.is_authenticated %}
         <h2 class="content-subhead">What we prepared for You</h2>
         <div class="pure-g">
+            {% for book in user.recommend_books.all %}
             <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+                <a class="pure-button" href="/books/{{ book.isbn }}">
+                <img class="pure-img-responsive" src="" alt="{{ book.name }}">
+                <h4>{{ book.name }}</h4>
+                </a>
             </div>
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            {% empty %}
+            <div class="pure-u-1-1 empty_message">
+                Currently, there are no books RECOMMENDED. Go to our book repo to look for your favorites.
             </div>
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
-            </div>
-            <div class="pure-u-1-4">
-                <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            {% endfor %}
+        </div>
+        {% else %}
+        <h2 class="content-subhead">Please Login First<h2>
+        <div class="pure-g">
+            <div class="pure-u-1-1">
+            <a class="no-login-message" href="/account/login/"></a>
             </div>
         </div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
