--- a/template/help.html
+++ b/template/help.html
@@ -5,10 +5,13 @@
     <div class="header">
         <h1>Help</h1>
     </div>
-    <div class="content">
-        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-        The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+    <div class="container">
+        <p>Online Book Shop is an online store for selling books. We recommend you to register to become our member user, because in this way you can buy the books, otherwise you can only search and view the information of every book. </p>
+        <p>After register, users can use the cart, and confirm an order. What’s more, we have an algorithm to recommend some books according to the books you’ve bought. Users can check all the orders, and view their basic information or modify them from the account page.</p>
+        <h2 id="toc_1">Contact Us</h2>
+        <p>Online Book Shop is developed by two students from the Software Engineering College, Southeast University. If you have any problems or suggestions in using this book store, we strongly hope you can contact us, our information is as follow:</p>
+        <p>Yao Yiyun  <a href="mailto:nixingwuwei@gmail.com">nixingwuwei@gmail.com</a>  15150685906</p>
+        <p>Shen Duo   <a href="mailto:471153168@qq.com">471153168@qq.com</a>  15150683186</p>
     </div>
 </div>
 {% endblock %}
